--- a/package.json
+++ b/package.json
@@ -2,13 +2,22 @@
   "name": "siran_with_template",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.18.3",
+    "npm": "6.14.6"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "email-validator": "^2.0.4",
+    "emailjs": "^3.3.0",
+    "emailjs-com": "^2.6.3",
+    "mailjs": "^0.1.18",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "sweetalert2": "^10.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
