--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "email-validator": "^2.0.4",
     "emailjs": "^3.3.0",
     "emailjs-com": "^2.6.3",
+    "gh-pages": "^3.1.0",
     "mailjs": "^0.1.18",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
