--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://sirancheevishan.github.io/Suresh",
   "name": "siran_with_template",
   "version": "0.1.0",
   "private": true,
